--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,9 @@
     "test/**/__snapshots__": true,
     "package-lock.json": true,
     "*.{css,sass,scss}.d.ts": true
+  },
+  "editor.rulers": [80,120],
+  "workbench.colorCustomizations": {
+      "editorRuler.foreground": "#ff4081"
   }
 }
