--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
   },
   "dependencies": {
     "@electron/notarize": "^2.3.2",
+    "@types/electron-json-storage": "^4.5.4",
     "electron-debug": "^3.2.0",
+    "electron-json-storage": "^4.6.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
